fix(swiper): ajusta la visibilidad y el tamaño de los botones de navegación

--- a/src/components/SwiperContainer/SwiperContainer.css
+++ b/src/components/SwiperContainer/SwiperContainer.css
@@ -15,12 +15,12 @@
 /* Navigation */
 .swiper-button-prev,
 .swiper-button-next {
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   width: 40px;
-  height: 90px;
-  top: 50%;
+  height: 85px;
+  top: 45%;
   transform: translateY(-80%);
   border-radius: 4px;
   color: white;
@@ -33,11 +33,6 @@
   font-size: 24px;
 }
 
-.slider-section:hover .swiper-button-prev,
-.slider-section:hover .swiper-button-next {
-  display: flex;
-}
-
 .swiper-button-prev { 
   left: 0;
 }
@@ -46,14 +41,7 @@
   right: 0;
 }
 
-@media (max-width: 1200px){
-.swiper-button-prev,
-.swiper-button-next {
-  display: flex;
-}
-}
-
-@media (min-width: 1890px){
+@media (min-width: 1920px){
 .swiper-button-next {
   right: 11px;
 }
